--- a/Client/garagespotter/src/pages/Home/home.module.scss
+++ b/Client/garagespotter/src/pages/Home/home.module.scss
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    height: 99vh;
+    height: 92vh;
     margin-top: 0px;
-    backdrop-filter: red;
+    overflow: hidden;
 }
