--- a/Client/garagespotter/src/pages/Home/map/defaultSidebar/defaultSidebar.module.scss
+++ b/Client/garagespotter/src/pages/Home/map/defaultSidebar/defaultSidebar.module.scss
@@ -2,8 +2,9 @@
     background-color: transparent;
     width: 100%;
     max-width: 450px;
-    max-height: 97%;
+    max-height: 100%;
     overflow-y: scroll;
+    overflow-x: hidden;
     position: absolute;
     z-index: $z-index-modal !important;
     top: 0;
