--- a/Client/garagespotter/src/pages/Login/login.module.scss
+++ b/Client/garagespotter/src/pages/Login/login.module.scss
@@ -57,4 +57,25 @@
     &:hover {
         background-color: darken($primary-color, 10%);
     }
+    &:disabled {
+        background-color: lighten($primary-color, 20%);
+        cursor: not-allowed;
+    }
+}
+.loadingSpinner {
+    border: 4px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 4px solid $primary-color;
+    width: 24px;
+    height: 24px;
+    animation: spin 1s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+    100% {
+        transform: rotate(360deg);
+    }
 }
