--- a/Client/garagespotter/src/pages/Reservations/reservations.module.scss
+++ b/Client/garagespotter/src/pages/Reservations/reservations.module.scss
@@ -79,7 +79,8 @@
             border-radius: $border-radius;
             cursor: pointer;
             transition: background-color $transition-default;
-
+            margin-right: 5px;
+            margin-top: 5px;
             &:hover {
                 background-color: darken($primary-color, 10%);
             }
