--- a/Client/garagespotter/src/pages/CreateElectricCharger/createElectricCharger.module.scss
+++ b/Client/garagespotter/src/pages/CreateElectricCharger/createElectricCharger.module.scss
@@ -53,7 +53,8 @@
         color: #333;
     }
 
-    input {
+    input,
+    select {
         width: 90%; // Full width for inputs
         padding: 0.75rem;
         font-size: 1rem;
@@ -66,6 +67,16 @@
             box-shadow: 0 0 4px rgba(26, 115, 232, 0.2);
             outline: none;
         }
+    }
+    select {
+        -webkit-appearance: none; // Remove default styling on Webkit browsers (e.g., Chrome, Safari)
+        -moz-appearance: none; // Remove default styling on Firefox
+        appearance: none; // Remove default styling for all browsers
+
+        background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 6"%3E%3Cpath d="M1 1l4 4 4-4" stroke="%23aaa" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"%3E%3C/path%3E%3C/svg%3E');
+        background-repeat: no-repeat;
+        background-position: right 10px center;
+        background-size: 12px;
     }
 }
 
