--- a/Client/garagespotter/src/pages/CreateElectricCharger/createElectricCharger.module.scss
+++ b/Client/garagespotter/src/pages/CreateElectricCharger/createElectricCharger.module.scss
@@ -67,11 +67,14 @@
             box-shadow: 0 0 4px rgba(26, 115, 232, 0.2);
             outline: none;
         }
+        &:disabled {
+            cursor: pointer;
+        }
     }
     select {
-        -webkit-appearance: none; // Remove default styling on Webkit browsers (e.g., Chrome, Safari)
-        -moz-appearance: none; // Remove default styling on Firefox
-        appearance: none; // Remove default styling for all browsers
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
 
         background-image: url('data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 6"%3E%3Cpath d="M1 1l4 4 4-4" stroke="%23aaa" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"%3E%3C/path%3E%3C/svg%3E');
         background-repeat: no-repeat;
