--- a/Client/garagespotter/src/pages/Home/map/defaultSidebar/defaultSidebar.module.scss
+++ b/Client/garagespotter/src/pages/Home/map/defaultSidebar/defaultSidebar.module.scss
@@ -92,10 +92,10 @@
     .selectedGarageItem {
         background-color: #007bff;
         color: #fff;
-        border: 2px solid #0056b3;
+        box-shadow: rgba(38, 41, 43, 0.479) 0px 50px 100px -20px,
+            rgba(39, 44, 48, 0.571) 0px 30px 60px -30px,
+            rgba(23, 27, 31, 0.537) 0px -2px 6px 0px inset !important;
         padding: $spacing-medium;
-        box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-        transform: scale(1.05);
         transition: all 0.3s ease-in-out;
     }
     .garageItem {
