--- a/Client/garagespotter/src/pages/Favorites/favorites.module.scss
+++ b/Client/garagespotter/src/pages/Favorites/favorites.module.scss
@@ -62,7 +62,7 @@
     }
 
     .removeButton {
-        background-color: $primary-color;
+        background-color: $error-color;
         color: #fff;
         margin-top: 10px;
         padding: $spacing-small $spacing-medium;
