--- a/Client/garagespotter/src/pages/EditProfile/editProfile.module.scss
+++ b/Client/garagespotter/src/pages/EditProfile/editProfile.module.scss
@@ -20,6 +20,10 @@
     border-radius: $border-radius;
     box-shadow: $box-shadow;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .title {
@@ -57,20 +61,6 @@
     }
 }
 
-.submitButton {
-    width: 150px;
-    background-color: $primary-color;
-    color: #fff;
-    padding: $spacing-medium $spacing-medium;
-    border: none;
-    border-radius: $border-radius;
-    cursor: pointer;
-    transition: background-color $transition-default;
-
-    &:hover {
-        background-color: darken($primary-color, 10%);
-    }
-}
 .errorMessage {
     color: red;
     margin-bottom: $spacing-small;
