--- a/Client/garagespotter/src/assets/scss/_variables.scss
+++ b/Client/garagespotter/src/assets/scss/_variables.scss
@@ -78,4 +78,11 @@ $transition-default: 0.3s ease;
     }
 
 }
+.error{
+    color: $error-color;
+}
 
+a{
+    text-decoration: none;
+    color: $primary-color;
+}
