--- a/Client/garagespotter/src/pages/CreateElectricCharger/createElectricCharger.module.scss
+++ b/Client/garagespotter/src/pages/CreateElectricCharger/createElectricCharger.module.scss
@@ -36,7 +36,7 @@
 
     @media (max-width: 768px) {
         grid-template-columns: 1fr;
-        width: 100%;
+        max-width: 100%;
         padding: 1.5rem;
     }
 }
