--- a/Client/garagespotter/src/assets/scss/_variables.scss
+++ b/Client/garagespotter/src/assets/scss/_variables.scss
@@ -86,3 +86,18 @@ a{
     text-decoration: none;
     color: $primary-color;
 }
+
+.reserveButton {
+    width: 100%;
+    padding: $spacing-medium;
+    background-color: $secondary-color;
+    color: white;
+    border: none;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.2s ease;
+
+    &:hover {
+        background-color: darken($secondary-color, 10%);
+    }
+}
