--- a/Client/garagespotter/src/pages/Home/map/defaultSidebar/defaultSidebar.module.scss
+++ b/Client/garagespotter/src/pages/Home/map/defaultSidebar/defaultSidebar.module.scss
@@ -112,6 +112,8 @@
         box-shadow: $box-shadow;
         transition: all 0.2s ease;
         background-color: white;
+        width: 100%;
+        margin-bottom: 8px;
         cursor: pointer;
 
         &:focus {
